--- a/menuapp/res/values/strings.xml
+++ b/menuapp/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">menuapp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="businessHint">Some Business</string>
 
 </resources>
