--- a/menuapp/res/values/strings.xml
+++ b/menuapp/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="businessHint">Some Business</string>
+    <string name="itemName">Item Name</string>
+    <string name="itemDescription">Some Item description and info about item. blah blah blah blah blah blah</string>
+    <string name="itemPrice">$99.99</string>
 
 </resources>
